单体版修改了builder的bug